--- a/term01todo.html
+++ b/term01todo.html
@@ -34,6 +34,15 @@
         Вы можете легко читать и редактировать файлы со списками дел в Vim или обычном блокноте, предустановленном на ПК. 
         <br><br>
         <a href="term01txt.html">Перейти к инструкциям</a>
+        <br><br>
+        <h3>Taskwarrior</h3>
+        Taskwarrior – это одно из наиболее мощных приложений для тайм-менеджмента. Потрясающие возможности систематизации, детализации, анализа задач. Минус только один – программа требует внимательного освоения. 
+        <br>
+        Tasrwarrior – это яркий пример того, что терминальные приложения могут быть богаче по функционалу и продуманнее с точки зрения эргономики, чем платные GUI аналоги (например Things или Omnifocus). 
+        <br>
+        Если у вас Windows, придется прибегнуть к <a href="https://www.cygwin.com">Cygwin</a>. На Mac приложение устанавливается через Homebrew.
+        <br><br>
+        Перейти к инструкциям (предупреждаю, что это 3948 слов)
 </tt>
        
 <br>
