--- a/term01taskw.html
+++ b/term01taskw.html
@@ -19,14 +19,17 @@
 -----------------------------------------------------------------
         <br>
         <br>
+        <center>
         <pre>
  _            _                             _            
 | |_ __ _ ___| | ____      ____ _ _ __ _ __(_) ___  _ __ 
 | __/ _` / __| |/ /\ \ /\ / / _` | '__| '__| |/ _ \| '__|
 | || (_| \__ \   <  \ V  V / (_| | |  | |  | | (_) | |   
- \__\__,_|___/_|\_\  \_/\_/ \__,_|_|  |_|  |_|\___/|_|</pre>
+ \__\__,_|___/_|\_\  \_/\_/ \__,_|_|  |_|  |_|\___/|_|</pre></center>
 
-        Узнать, какая версия Taskwarrior у вас установлена можно с помощью команды
+ <br><br>
+ <h3>РУКОВОДСТВА</h3>
+ Узнать, какая версия Taskwarrior у вас установлена можно с помощью команды
         <br><br>
         task _version
         <br><br>
@@ -609,7 +612,7 @@
         Выведет на экран несколько месяцев (сколько поместится в одном ряду), начиная с самого раннего запланированного задания. 
         <br><br>
         
-        <h3>Фильтрация дат с помощью виртуальные тегов</h3>
+        <h3>ФИЛЬТРАЦИЯ ДАТ</h3>
         
         Хотите просмотреть только задачи на сегодня? Используйте команду
         <br><br>
@@ -652,7 +655,8 @@
         <br><br>
         выведет на экран команды ближайших дней, исключая сегодняшний. 
         <br><br>
-        <h3>Внесение дополнительных условий в расписание</h3>
+
+        <h3>ДОПОЛНИТЕЛЬНЫЕ УСЛОВИЯ ДЛЯ ЗАДАЧ</h3>
         Функция due назначает крайний срок выполнения задачи. Но что если вы хотите обозначить не только финиш, но и старт? Допустим, к выполнению определенного дела не имеет смысла приступать раньше определенного срока. 
         <br><br>
         Для этого существует функция scheduled. 
