--- a/term01taskw.html
+++ b/term01taskw.html
@@ -19,16 +19,13 @@
 -----------------------------------------------------------------
         <br>
         <br>
-        <center>
-        <pre>
-   _            _                             _
-  | |_ __ _ ___| | ____      ____ _ _ __ _ __(_) ___  _ __
-  | __/ _` / __| |/ /\ \ /\ / / _` | '__| '__| |/ _ \| '__|
-  | || (_| \__ \   <  \ V  V / (_| | |  | |  | | (_) | |
-   \__\__,_|___/_|\_\  \_/\_/ \__,_|_|  |_|  |_|\___/|_|
-</pre>
-</center>
 
+        <pre>
+ _            _                             _
+| |_ __ _ ___| | ____      ____ _ _ __ _ __(_) ___  _ __
+| __/ _` / __| |/ /\ \ /\ / / _` | '__| '__| |/ _ \| '__|
+| || (_| \__ \   <  \ V  V / (_| | |  | |  | | (_) | |
+ \__\__,_|___/_|\_\  \_/\_/ \__,_|_|  |_|  |_|\___/|_|</pre>
  <br><br>
  <h3>РУКОВОДСТВА</h3>
  Узнать, какая версия Taskwarrior у вас установлена можно с помощью команды
