--- a/term01txt.html
+++ b/term01txt.html
@@ -139,8 +139,7 @@
         Для настоящего гика это не кошерно, но я должен упомянуть, что приложение todo.txt <br>
         имеет реализации с графическим интерфейсом. Вы можете посмотреть их на <a href="http://todotxt.org">официальном сайте</a>
         <br><br>
-        P.S. Лично я предпочитаю программу Taskwarrior. Она намного богаче по функционалу, однако и времени на освоение требует большего.
-        Возможно, о ней будет один из ближайших обзоров.
+        P.S. Лично я предпочитаю программу <a href="term01taskw.html">Taskwarrior</a>. Она намного богаче по функционалу, однако и времени на освоение требует большего.
         
 </tt>
 
