--- a/news.html
+++ b/news.html
@@ -20,6 +20,15 @@
         <br>
         <br>
 <center>
+
+    <pre>
+    +--------------------------------------------------------------------------------+
+    |                                 2020-01-24                                     |
+    |                                                                                |
+    | В раздлеле Terminal появилась очень длинная инструкция на эпический            |
+    | тудушник <a href="term01todo.html">Taskwarrior</a>.                                                          |
+    +--------------------------------------------------------------------------------+
+        </pre>
     <pre>
     +--------------------------------------------------------------------------------+
     |                                 2020-01-17                                     |
