--- a/term01taskw.html
+++ b/term01taskw.html
@@ -28,34 +28,40 @@
  \__\__,_|___/_|\_\  \_/\_/ \__,_|_|  |_|  |_|\___/|_|</pre>
  <br><br>
  <h3>РУКОВОДСТВА</h3>
- Узнать, какая версия Taskwarrior у вас установлена можно с помощью команды
-        <br><br>
-        task _version
-        <br><br>
-        Программа Taskwarrior содержит замечательное руководство на английском. 
-        <br><br>
-        Вызвать его можно командой
-        <br><br>
-        man taskrc
-        <br><br>
-        Ещё одна полезная команда: 
-        <br><br>
-        task help
-        <br><br>
-        Главная команда, которую вы должны помнить, — это вход в меню команд: 
-        <br><br>
-        task commands
-        <br><br>
-        Чтобы узнать, какие отчеты по задачам вы можете получить, наберите команду 
-        <br><br>
-        task reports  
-        <br><br>
-        Если английский кажется вам недружелюбным, используйте данное руководство. 
-        <br><br>
-        Да, вы можете вывести на экран логотип Программы
-        <br><br>
-        task logo
-        <br><br><br>
+Конечно первым делом вам стоит обратиться к руководствам на официальном сайте <a href="https://taskwarrior.org/docs">Taskwarrior</a>. Там вы обнаружите исчерпывающую информацию.
+<br><br>
+Естественно, вы можете обратиться к руководству, идущему в комплекте с программой. Его можно вызвать командой <br><br>
+man task <br><br>
+Еще есть отдельное руководство по найстойкам :) Оно доступно по команде <br><br>
+man taskrc
+<br><br>
+Еще на выручку всегда может прийти короткая шпаргалка <br><br>
+task help
+<br><br>
+Главная команда, которую вы должны помнить, — это вход в меню команд: 
+<br><br>
+task commands
+<br><br>
+Чтобы узнать, какие отчеты по задачам вы можете получить, наберите команду 
+<br><br>
+task reports  
+<br><br>
+Совершенно непонятно зачем, но вы можете вызвать в терминале логотип программы <br><br>
+task logo
+<br><br>
+Taskwarrior получает обновления не так часто. Однако они время от времени случаются. Проверить, какая версия Taskwarrior у вас установлена можно с помощью команды
+<br><br>
+task _version
+<br><br>
+Увидеть Taskwarrior в действии можно благодаря нескольким замечательным видео на Youtube:<br><br>
+<a href="https://www.youtube.com/watch?v=zl68asL9jZA">Выступление Паула Фенвика</a>, <a href="https://www.youtube.com/watch?v=3iyaS5WwcuQ&list=PLI4gKGOkRTj37BHpZnFBVHDsa3J-dAUVF">подкаст Била Хертзинга</a>.      
+<br><br>  
+Еще одно замечательное руководство по использованию Taskwarrior вместе с ситемой GTD написал Том Керкхов. <a href="https://cs-syd.eu/tags/Taskwarrior">Вот оно</a>.  
+<br><br>
+Если английский кажется вам недружелюбным, используйте руководство, представленное ниже. Его будет вполне достаточно для использования приложения.
+Однако некотрые сюжеты остались за скобками. Я не рассматривал интеграцию с Timewarrior (возможно рассмотрю позднее), настройку различных плагинов, цветовых схем и т.п.
+ <br><br>
+      
         <h3>СОЗДАНИЕ ЗАДАЧ</h3>
         Нет ничего проще, чем создать новую задачу в Taskwarrior.
         Просто набираем в командной строке:
