--- a/term01taskw.html
+++ b/term01taskw.html
@@ -28,14 +28,14 @@
  \__\__,_|___/_|\_\  \_/\_/ \__,_|_|  |_|  |_|\___/|_|</pre>
  <br><br>
  <h3>РУКОВОДСТВА</h3>
-Конечно первым делом вам стоит обратиться к руководствам на официальном сайте <a href="https://taskwarrior.org/docs">Taskwarrior</a>. Там вы обнаружите исчерпывающую информацию.
+Конечно, первым делом вам стоит обратиться к руководствам на официальном сайте <a href="https://taskwarrior.org/docs">Taskwarrior</a>. Там вы обнаружите исчерпывающую информацию.
 <br><br>
 Естественно, вы можете обратиться к руководству, идущему в комплекте с программой. Его можно вызвать командой <br><br>
 man task <br><br>
 Еще есть отдельное руководство по найстойкам :) Оно доступно по команде <br><br>
 man taskrc
 <br><br>
-Еще на выручку всегда может прийти короткая шпаргалка <br><br>
+Кроме того, на выручку всегда может прийти короткая шпаргалка <br><br>
 task help
 <br><br>
 Главная команда, которую вы должны помнить, — это вход в меню команд: 
