--- a/latex.html
+++ b/latex.html
@@ -32,10 +32,9 @@ Latex (читается латех) – это одна из наиболее г
 Начать знакомство с Latex стоит с замечательного курса ВШЭ на сайте Coursera (он бесплатный). 
 
 <a href="https://ru.coursera.org/learn/latex">Документы и презентации в LaTeX </a> <br><br>
-
-Вы можете скачать с Latex, перейдя на официальную страницу <a href="https://www.latex-project.org">latex-project.org</a>
 <br><br>
-Latex можно скачать и установить на компьютер. Программа бесплатна и кроссплатформенна. <br><br>
+Вы можете скачать Latex, перейдя на официальную страницу <a href="https://www.latex-project.org">latex-project.org</a><br>
+Программа бесплатна и кроссплатформенна. <br><br>
 Если на вашем компьютере мало места, вы вполне можете использовать онлайн версии Latex. Вот самые популярные: <br><br>
 
 <a href="https://www.overleaf.com">overleaf.com</a><br>
