--- a/news.html
+++ b/news.html
@@ -20,6 +20,15 @@
         <br>
         <br>
 <center>
+<pre>
+    +--------------------------------------------------------------------------------+
+    |                                 2020-01-31                                     |
+    |                                                                                |
+    | В раздлеле "Читательский маршрут" появился список книг для тех, кто хочет      |
+    | разобраться в философии                                                        |
+    +--------------------------------------------------------------------------------+
+
+</pre>
 
     <pre>
     +--------------------------------------------------------------------------------+
