--- a/readinglist.html
+++ b/readinglist.html
@@ -25,13 +25,14 @@
 планирую прочесть. 
 <br>
 <ol>
-<li><a href="bib03psi.html">Список книг, для тех, кто хочет подружиться с головой.</a>
+<li><a href="bib03psi.html">Список книг для тех, кто хочет подружиться с головой.</a>
 <li><a href="bib01prad.html">Список книг, в которых художественно осмысляется феномен рекламы и PR.</a>
-<li><a href="bib02write.html">Список книг, для тех, кто хочет научиться писать прозу.</a>
-<li><a href="bib04nonf.html">Спискок книг, для тех, кто хочет научиться писать статьи, эссе, в общем, нонфикшен.</a>
-<li><a href="bib05pol.html">Список книг, для тех, кто хочет выучить много иностранных языков.</a>
+<li><a href="bib02write.html">Список книг для тех, кто хочет научиться писать прозу.</a>
+<li><a href="bib04nonf.html">Спискок книг для тех, кто хочет научиться писать статьи, эссе, в общем, нонфикшен.</a>
+<li><a href="bib05pol.html">Список книг для тех, кто хочет выучить много иностранных языков.</a>
 <li><a href="bib06herm.html">Список книг к курсу по философской герменевтике</a> (предупреждаю, что список длинный!).
 <li><a href="bib07herm.html">Список книг по библейской герменевтике.</a>
+<li><a href="bib08phil.html">Список книг для первоначального знакомства с философией</a>
 </ol>
 </tt>
 
