--- a/bib08phil.html
+++ b/bib08phil.html
@@ -25,14 +25,16 @@
 <li> Баджини Д. Свинья, которая хотела, чтобы ее съели. Занимательные философские загадки / Д. Баджини. – Москва: Рипол Классик, 207н. э. – 304 с.
 <li> Бадью А. Манифест философии / А. Бадью. – Санкт-Петербург: Machina, 2003. – 184 с.
 <li> Бохенский Ю. Современная европейская философия / Ю. Бохенский. – Москва: Научный мир, 2000. – 256 с.
-<li> Калеро П. Философия с шуткой / П. Калеро. – Москва: КоЛибри, 2010. – 400 с.
+<li> Пильюччи М. Как быть стоиком. Античная философия и современная жизн / М. Пильюччи. – Москва: Альпина нон-фикшн, 2018. – 279 с.
+    <li> Калеро П. Философия с шуткой / П. Калеро. – Москва: КоЛибри, 2010. – 400 с.
     <li> Каратини Р. Введение в философию / Р. Каратини. – Москва: Эксмо, 2003. – 736 с.
     <li> Каткарт Т. Как-то раз Платон зашел в бар… Понимание философии через шутки / Т. Каткарт, Д. Клейн. – Москва: Альпина нон-фикшн, 2017. – 236 с.
     <li> Каткарт Т. Хайдеггер и гиппопотам входят в райские врата: Жизнь, смерть и жизнь после смерти через призму философии и шутки / Т. Каткарт, Д. Клейн. – Москва: Альпина нон-фикшн, 2014. – 256 с.
     <li> Лоу С. Философские истории / С. Лоу. – Москва: АСТ, 2007. – 280 с.
     <li> Лоу С. Философский тренинг / С. Лоу. – Москва: АСТ, 2007. – 352 с.
     <li> Мерло-Понти М. В защиту философии / М. Мерло-Понти. – Москва: Издательство гуманитарной литературы, 1996. – 248 с.
-    <li> Нагель Т. Что все это значит? Очень краткое введение в фило­ софию / Т. Нагель. – Москва: Идея-Пресс, 2001. – 84 с.
+    <li> Гордер Ю. Мир Софии / Ю. Гордер. – Москва: Амфора, 2006. – 656 с.
+        <li> Нагель Т. Что все это значит? Очень краткое введение в фило­ софию / Т. Нагель. – Москва: Идея-Пресс, 2001. – 84 с.
     <li> Ортега-и-Гассет Х. Что такое философия? / Х. Ортега-и-Гассет. – Москва: Наука, 1991. – 408 с.
     <li> Поупкин Р. Философия: вводный курс / Р. Поупкин, А. Стролл. – Москва: Серебряные нити, 1998. – 512 с.
     <li> Прехт Д. Я – это я? И если да, то насколько? Философское путешествие / Д. Прехт. – Москва: АСТ, 2013. – 350 с.
