--- a/news.html
+++ b/news.html
@@ -20,6 +20,16 @@
         <br>
         <br>
 <center>
+
+<pre>
+    +--------------------------------------------------------------------------------+
+    |                                 2020-02-08                                     |
+    |                                                                                |
+    | С запозданием на один день выкладываю обновление. В разделе "Сетевой улов"     |
+    | повилась новая подборка - <a href="webcatch03quot.html">"О цитировании".</a>                                     |
+    +--------------------------------------------------------------------------------+
+    
+</pre>
 <pre>
     +--------------------------------------------------------------------------------+
     |                                 2020-01-31                                     |
