--- a/webcatch.html
+++ b/webcatch.html
@@ -29,6 +29,8 @@
 <a href="web01lat.html">Изучение латыни</a>
 <br><br>
 <a href="webcath02.html">Цифровой детокс</a>
+<br><br>
+<a href="webcatch03quot.html">О цитировании</a>
 
 </tt>
        <br>
