--- a/emacs.html
+++ b/emacs.html
@@ -25,11 +25,20 @@
    |  __/ | | | | | (_| | (__\__ \
     \___|_| |_| |_|\__,_|\___|___/</pre></center>
         <br><br>
-Очень скоро этот раздел начнет пополняться ценной информацией. Emacs - это целый мир, здесь можно сделать практически всё. <br>
+Emacs - это целый мир, здесь можно сделать практически всё. 
+Здесь пишут тексты, проверяют электронную почту, занимаются программированием. Программу можно настроить под любые нужды. 
+И при этом вы можете хранить все свои данные в чистом текстовом формате, который сможете отрыть и прочитать на любом компьютере
+и в любом приложении (способном распознавать txt).<br><br>
+Единственная проблемма Emacs - он слишком непохож на привычные всем программы с графической оболочкой. 
+На начальном этапе это может напугать. Что тут скажешь? C Emacs нужно подружиться. Это принесет щедрые плоды. Но не рассчитывайте
+постигнуть все премудрости программы за несколько вечеров! 
 <br>
-Пока можете посмотреть подкаст (на английском), посвященный использованию OrgMode, одному из пакетов Emacs.
+<br>
+Предлагаю начать знакомство с просмотра подкаста (на английском), посвященного использованию Org-mode, одному из пакетов Emacs.
 <br><br>
 <a href="https://www.youtube.com/playlist?list=PLVtKhBrRV_ZkPnBtt_TD1Cs9PJlU0IIdE">Смотреть</a>
+<br><br>
+A вот моя заметка об <a href="emacs01em.html">использовании пиктограмм</a>, что может оказаться полезным в Org-mode.
 
 </tt>
        
