--- a/news.html
+++ b/news.html
@@ -23,6 +23,15 @@
 
 <pre>
     +--------------------------------------------------------------------------------+
+    |                                 2020-02-15                                     |
+    |                                                                                |
+    | Опять задержка на день :) Зато появилось обновление в разделе <a href="emacs.html">Emacs</a>.           |
+    | Здесь раздел, посвященный <a href="emacs01em.html">пикторгаммам</a> и <a href="emacs01table.html">таблица-подсказка</a>                     |
+    +--------------------------------------------------------------------------------+
+        
+</pre>    
+<pre>
+    +--------------------------------------------------------------------------------+
     |                                 2020-02-08                                     |
     |                                                                                |
     | С запозданием на один день выкладываю обновление. В разделе "Сетевой улов"     |
