--- a/emacs01em.html
+++ b/emacs01em.html
@@ -14,9 +14,9 @@
 
        
 <tt>
-                     ------------------------------------------ <br>
+                     ------------------------------------------------- <br>
 <a href="index.html">главная</a> ⇢ <a href="geeklist.html">путеводитель гика</a> ⇢ <a href="emacs.html">emacs</a> ⇢ пиктограммы <br> 
-------------------------------------------
+-------------------------------------------------
         <br>
         
         Использование всяких причудливых знаков (стрелочек, рожиц, предметов) в Emacs не слишком эргономично. 
@@ -35,7 +35,7 @@
         <br><br>
         Но нас в данном случае интересуют исключительно пиктограммы. 
         <br><br>
-        Я для удобства собрал все интересные мне пиктограммы в табличку. 
+        Я для удобства собрал все интересные мне пиктограммы в <a href="emacs01table.html">табличку</a>. 
         <br><br>
         Но как это работает при наборе текста?
         <br><br>
