--- a/emacs01table.html
+++ b/emacs01table.html
@@ -18,71 +18,72 @@
 <a href="index.html">главная</a> ⇢ <a href="geeklist.html">путеводитель гика</a> ⇢ <a href="emacs.html">emacs</a> ⇢ <a href="emacs01em.html">пиктограммы</a> ⇢ таблица символов<br> 
 ------------------------------------------------------------
         <br><br>
-| Символ | Название                                      |  Код | Область применения     |<br>
-|--------+-----------------------------------------------+------+------------------------|<br>
-| ○      | white circle                                  | 25cb | Для буллет-джорнал     |<br>
-| ◌      | dotted circle                                 | 25cc |                        |<br>
-| ◍      | circle with vertical fill                     | 25cd |                        |<br>
-| ◎      | bullseye                                      | 25ce |                        |<br>
-| ◔      | circle with upper right quadrant black        | 25d4 |                        |<br>
-| ◑      | circle with right half black                  | 25d1 |                        |<br>
-| ◕      | circle with all but upper left quadrant black | 25d5 |                        |<br>
-| ●      | black circle                                  | 25cf |                        |<br>
-|--------+-----------------------------------------------+------+------------------------|<br>
-| ☐      | ballot box                                    | 2610 | Для чек-листа          |<br>
-| ☑      | ballot box with check                         | 2611 | Отметка о выполнении   |<br>
-| ☒      | ballot box with x                             | 2612 | Отметка об отмене      |<br>
-|--------+-----------------------------------------------+------+------------------------|<br>
-| ⌨      | keyboard                                      | 2328 | Работа над текстом     |<br>
-| ✍      | writing hand                                  | 270d |                        |<br>
-| ✎      | lower right pencil                            | 270e |                        |<br>
-|--------+-----------------------------------------------+------+------------------------|<br>
-| ☆      | white star                                    | 2606 | Рейтинг                |<br>
-| ★      | black star                                    | 2605 |                        |<br>
-|--------+-----------------------------------------------+------+------------------------|<br>
-| ☹      | white frowning face                           | 2639 | Обозначение эмоций     |<br>
-| ☺      | white smiling face                            | 263a |                        |<br>
-|--------+-----------------------------------------------+------+------------------------|<br>
-| ☀      | black sun with rays                           | 2600 | Обозначение погоды     |<br>
-| ☁      | cloud                                         | 2601 | для дневника или       |<br>
-| ☂      | umbrella                                      | 2602 | обозначение эмоций     |<br>
-| ☃      | snowman                                       | 2603 |                        |<br>
-|--------+-----------------------------------------------+------+------------------------|<br>
-| ☜      | white left pointing index                     | 261c | Указание на важность   |<br>
-| ☝      | white up pointing index                       | 261d |                        |<br>
-| ☞      | white right pointing index                    | 261e |                        |<br>
-| ☟      | white down pointing index                     | 261f |                        |<br>
-|--------+-----------------------------------------------+------+------------------------|<br>
-| ⚐      | white flag                                    | 2690 | Указание на важность   |<br>
-| ⚑      | black flag                                    | 2691 |                        |<br>
-| ⚠      | warning sign                                  | 26a0 |                        |<br>
-|--------+-----------------------------------------------+------+------------------------|<br>
-| ☏      | white telephone                               | 260f | Звонки                 |<br>
-| ✉      | envelope                                      | 2709 | Переписка              |<br>
-| ⚒      | hammer and pick                               | 2692 | Работа                 |<br>
-| ☕      | hot beverage                                  | 2615 | Приём пищи             |<br>
-| ☠      | skull and crossbones                          | 2620 | Дедлайн                |<br>
-| ☯      | yin yang                                      | 262f | Медитация              |<br>
-| ⚓      | anchor                                        | 2693 | Стопор в каком-то деле |<br>
-| ⚔      | crossed swords                                | 2694 | Обозначение сложности  |<br>
-| ✌      | victory hand                                  | 270с | Успех в деле           |<br>
-|--------+-----------------------------------------------+------+------------------------|<br>
-| ⇨      | rightwards white arrow                        | 21e8 | Перенос, важность,     |<br>
-| ⇦      | leftwards white arrow                         | 21e6 | динамика процесса      |<br>
-| ⇧      | upwards white arrow                           | 21e7 |                        |<br>
-| ⇩      | downwards white arrow                         | 21e9 |                        |<br>
-|--------+-----------------------------------------------+------+------------------------|<br>
-| 👨‍👩‍👧‍👦     |      У этих символов в Emacs специальных      | f094 | Семейное время         |<br>
-| 🏋️‍♀️     |      названий нет                             | f086 | Физические упражнения  |<br>
-| 📚     |                                               | f0a8 | Чтение книг            |<br>
-| 🎬     |                                               | f0b7 | Просмотр видео         |<br>
-| 🛏     |                                               | f0e3 | Сон                    |<br>
-| 💬     |                                               | f05e | Общение                |<br>
-| 📥     |                                               | f0d2 | Работа с архивом       |<br>
-| 📅     |                                               | f0a6 | Планирование           |<br>
-| 🎓     |                                               | f0ec | Учёба                  |<br>
-| 🗂     |                                               | f0cc | Упорядочивание файлов  |<br>
-| 📄     |                                               | f09d | Чтение статей          |<br>
+<pre>
+| Символ | Название                                      |  Код | Область применения     |
+|--------+-----------------------------------------------+------+------------------------|
+| ○      | white circle                                  | 25cb | Для буллет-джорнал     |
+| ◌      | dotted circle                                 | 25cc |                        |
+| ◍      | circle with vertical fill                     | 25cd |                        |
+| ◎      | bullseye                                      | 25ce |                        |
+| ◔      | circle with upper right quadrant black        | 25d4 |                        |
+| ◑      | circle with right half black                  | 25d1 |                        |
+| ◕      | circle with all but upper left quadrant black | 25d5 |                        |
+| ●      | black circle                                  | 25cf |                        |
+|--------+-----------------------------------------------+------+------------------------|
+| ☐      | ballot box                                    | 2610 | Для чек-листа          |
+| ☑      | ballot box with check                         | 2611 | Отметка о выполнении   |
+| ☒      | ballot box with x                             | 2612 | Отметка об отмене      |
+|--------+-----------------------------------------------+------+------------------------|
+| ⌨      | keyboard                                      | 2328 | Работа над текстом     |
+| ✍      | writing hand                                  | 270d |                        |
+| ✎      | lower right pencil                            | 270e |                        |
+|--------+-----------------------------------------------+------+------------------------|
+| ☆      | white star                                    | 2606 | Рейтинг                |
+| ★      | black star                                    | 2605 |                        |
+|--------+-----------------------------------------------+------+------------------------|
+| ☹      | white frowning face                           | 2639 | Обозначение эмоций     |
+| ☺      | white smiling face                            | 263a |                        |
+|--------+-----------------------------------------------+------+------------------------|
+| ☀      | black sun with rays                           | 2600 | Обозначение погоды     |
+| ☁      | cloud                                         | 2601 | для дневника или       |
+| ☂      | umbrella                                      | 2602 | обозначение эмоций     |
+| ☃      | snowman                                       | 2603 |                        |
+|--------+-----------------------------------------------+------+------------------------|
+| ☜      | white left pointing index                     | 261c | Указание на важность   |
+| ☝      | white up pointing index                       | 261d |                        |
+| ☞      | white right pointing index                    | 261e |                        |
+| ☟      | white down pointing index                     | 261f |                        |
+|--------+-----------------------------------------------+------+------------------------|
+| ⚐      | white flag                                    | 2690 | Указание на важность   |
+| ⚑      | black flag                                    | 2691 |                        |
+| ⚠      | warning sign                                  | 26a0 |                        |
+|--------+-----------------------------------------------+------+------------------------|
+| ☏      | white telephone                               | 260f | Звонки                 |
+| ✉      | envelope                                      | 2709 | Переписка              |
+| ⚒      | hammer and pick                               | 2692 | Работа                 |
+| ☕      | hot beverage                                  | 2615 | Приём пищи             |
+| ☠      | skull and crossbones                          | 2620 | Дедлайн                |
+| ☯      | yin yang                                      | 262f | Медитация              |
+| ⚓      | anchor                                        | 2693 | Стопор в каком-то деле |
+| ⚔      | crossed swords                                | 2694 | Обозначение сложности  |
+| ✌      | victory hand                                  | 270с | Успех в деле           |
+|--------+-----------------------------------------------+------+------------------------|
+| ⇨      | rightwards white arrow                        | 21e8 | Перенос, важность,     |
+| ⇦      | leftwards white arrow                         | 21e6 | динамика процесса      |
+| ⇧      | upwards white arrow                           | 21e7 |                        |
+| ⇩      | downwards white arrow                         | 21e9 |                        |
+|--------+-----------------------------------------------+------+------------------------|
+| 👨‍👩‍👧‍👦     |      У этих символов в Emacs специальных      | f094 | Семейное время         |
+| 🏋️‍♀️     |      названий нет                             | f086 | Физические упражнения  |
+| 📚     |                                               | f0a8 | Чтение книг            |
+| 🎬     |                                               | f0b7 | Просмотр видео         |
+| 🛏     |                                               | f0e3 | Сон                    |
+| 💬     |                                               | f05e | Общение                |
+| 📥     |                                               | f0d2 | Работа с архивом       |
+| 📅     |                                               | f0a6 | Планирование           |
+| 🎓     |                                               | f0ec | Учёба                  |
+| 🗂     |                                               | f0cc | Упорядочивание файлов  |
+| 📄     |                                               | f09d | Чтение статей          |</pre>
                             
 </tt>        
 </body>
