--- a/emacs01em.html
+++ b/emacs01em.html
@@ -17,11 +17,11 @@
                      ------------------------------------------------- <br>
 <a href="index.html">главная</a> ⇢ <a href="geeklist.html">путеводитель гика</a> ⇢ <a href="emacs.html">emacs</a> ⇢ пиктограммы <br> 
 -------------------------------------------------
-        <br>
+        <br><br>
         
         Использование всяких причудливых знаков (стрелочек, рожиц, предметов) в Emacs не слишком эргономично. 
         По крайней мере, вам придётся повозиться с настройками, чтобы добавить вожделенные пиктограммы. 
-        А ещё о цветных картинках придётся забыть. Ваш ждёт весьма урезанный набор одноцветных символов. <br><br>
+        А ещё о цветных картинках придётся забыть. Ваш ждёт урезанный набор одноцветных символов. <br><br>
 
         Конечно, настоящих любителей Emacs это не останавливает, ведь он и создавался не для того, чтобы постить смайлики. 
         <br><br>
@@ -59,10 +59,10 @@
         <br><br>
         Появится новое окно с информацией о символе.
 <br><br>
-Ясное дело, постоянно сверяться с таблицей быстро надоест. Процесс должен быть оптимизирован. Здесь на помощь приходит расширение 
+Ясное дело, постоянно сверяться с таблицей быстро надоест. Процесс должен быть оптимизирован. На помощь приходит расширение 
 <a href="https://github.com/mrkkrp/char-menu">char-menu</a>. Оно позволят удобно организовать пиктограммы по темам и быстро вызывать их.
 Здесь много и других полезностей. Например, вы можете выделить фразу и сразу заключить её в кавычки с двух сторон. 
-Устанавливать расширение удобнее с помощью MELPA. Просто наберите команду 
+Устанавливать расширение удобнее всего с помощью MELPA. Просто наберите команду 
 <br><br>
 M-x package-install char-menu ⏎
 <br><br>
