--- a/emacs01em.html
+++ b/emacs01em.html
@@ -67,17 +67,13 @@
 M-x package-install char-menu ⏎
 <br><br>
 Как только приложение установлено, вы можете приступить к настройкам. <br><br>
-Команда <br><br>
+Наберите команду <br><br>
 M-x customize-group ⏎ char-menu ⏎
 <br><br>
-Дальше в диалогов окне вы можете настроить группы символов, которые всегда должны быть под рукой. 
+Дальше в диалоговом окне вы можете настроить группы символов, которые всегда должны быть под рукой. 
 <br><br>
 Вызов меню осуществляется командой <br><br>
 M-x char-menu
-
-
-
-
 </tt>        
 </body>
 </html>
