--- a/bib08phil.html
+++ b/bib08phil.html
@@ -25,27 +25,28 @@
 <li> Баджини Д. Свинья, которая хотела, чтобы ее съели. Занимательные философские загадки / Д. Баджини. – Москва: Рипол Классик, 207н. э. – 304 с.
 <li> Бадью А. Манифест философии / А. Бадью. – Санкт-Петербург: Machina, 2003. – 184 с.
 <li> Бохенский Ю. Современная европейская философия / Ю. Бохенский. – Москва: Научный мир, 2000. – 256 с.
+<li> Гурина М. Философия: Учеб. пособие для выпускных классов лицеев, для поступающих в высшие школы и студентов первого цикла высш. образования / М. Гурина. – Москва: Республика, 1998. – 540 с.
 <li> Пильюччи М. Как быть стоиком. Античная философия и современная жизн / М. Пильюччи. – Москва: Альпина нон-фикшн, 2018. – 279 с.
-    <li> Калеро П. Философия с шуткой / П. Калеро. – Москва: КоЛибри, 2010. – 400 с.
-    <li> Каратини Р. Введение в философию / Р. Каратини. – Москва: Эксмо, 2003. – 736 с.
-    <li> Каткарт Т. Как-то раз Платон зашел в бар… Понимание философии через шутки / Т. Каткарт, Д. Клейн. – Москва: Альпина нон-фикшн, 2017. – 236 с.
-    <li> Каткарт Т. Хайдеггер и гиппопотам входят в райские врата: Жизнь, смерть и жизнь после смерти через призму философии и шутки / Т. Каткарт, Д. Клейн. – Москва: Альпина нон-фикшн, 2014. – 256 с.
-    <li> Лоу С. Философские истории / С. Лоу. – Москва: АСТ, 2007. – 280 с.
-    <li> Лоу С. Философский тренинг / С. Лоу. – Москва: АСТ, 2007. – 352 с.
-    <li> Мерло-Понти М. В защиту философии / М. Мерло-Понти. – Москва: Издательство гуманитарной литературы, 1996. – 248 с.
-    <li> Гордер Ю. Мир Софии / Ю. Гордер. – Москва: Амфора, 2006. – 656 с.
-        <li> Нагель Т. Что все это значит? Очень краткое введение в фило­ софию / Т. Нагель. – Москва: Идея-Пресс, 2001. – 84 с.
-    <li> Ортега-и-Гассет Х. Что такое философия? / Х. Ортега-и-Гассет. – Москва: Наука, 1991. – 408 с.
-    <li> Поупкин Р. Философия: вводный курс / Р. Поупкин, А. Стролл. – Москва: Серебряные нити, 1998. – 512 с.
-    <li> Прехт Д. Я – это я? И если да, то насколько? Философское путешествие / Д. Прехт. – Москва: АСТ, 2013. – 350 с.
-    <li> Свендсен Л. Философия философии / Л. Свендсен. – Москва: Прогресс-Традиция, 2018. – 208 с.
-    <li> Скирбекк Г. История философии: Учеб. пособие для стул. высш. учеб, заведений / Г. Скирбекк, Н. Гилье. – Москва: Гуманит. изд. центр ВЛАДОС, 2001. – 800 с.
-    <li> Слезак Т. Как читать Платона / Т. Слезак. – Санкт-Петербург: Изд-во С.-Петерб. ун-та, 2008. – 314 с.
-    <li> Тейчман Д. Философия. Руководство для начинающих / Д. Тейчман, К. Эванс. – Москва: Весь мир, 1998. – 248 с.
-    <li> Хавьер С. Пять лекций по философии / С. Хавьер. – Москва: Институт философии, теологии и истории св. Фомы, 2007. – 200 с.
-    <li> Хесс Р. 25 ключевых книг по философии / Р. Хесс. – Челябинск: Урал ЛТД, 1999. - 366
-    <li> Ясперс К. Всемирная история философии. Введение / К. Ясперс. – Санкт-Петербург: Наука, 2000. – 272 с.
-    
+<li> Калеро П. Философия с шуткой / П. Калеро. – Москва: КоЛибри, 2010. – 400 с.
+<li> Каратини Р. Введение в философию / Р. Каратини. – Москва: Эксмо, 2003. – 736 с.
+<li> Каткарт Т. Как-то раз Платон зашел в бар… Понимание философии через шутки / Т. Каткарт, Д. Клейн. – Москва: Альпина нон-фикшн, 2017. – 236 с.
+<li> Каткарт Т. Хайдеггер и гиппопотам входят в райские врата: Жизнь, смерть и жизнь после смерти через призму философии и шутки / Т. Каткарт, Д. Клейн. – Москва: Альпина нон-фикшн, 2014. – 256 с.
+<li> Лоу С. Философские истории / С. Лоу. – Москва: АСТ, 2007. – 280 с.
+<li> Лоу С. Философский тренинг / С. Лоу. – Москва: АСТ, 2007. – 352 с.
+<li> Марсель Г. Трагическая мудрость философии. Избранные работы / Г. Марсель. – Москва: Издательство гуманитарной литературы, 1995. – 216 с.
+<li> Мерло-Понти М. В защиту философии / М. Мерло-Понти. – Москва: Издательство гуманитарной литературы, 1996. – 248 с.
+<li> Гордер Ю. Мир Софии / Ю. Гордер. – Москва: Амфора, 2006. – 656 с.
+<li> Нагель Т. Что все это значит? Очень краткое введение в фило­ софию / Т. Нагель. – Москва: Идея-Пресс, 2001. – 84 с.
+<li> Ортега-и-Гассет Х. Что такое философия? / Х. Ортега-и-Гассет. – Москва: Наука, 1991. – 408 с.
+<li> Поупкин Р. Философия: вводный курс / Р. Поупкин, А. Стролл. – Москва: Серебряные нити, 1998. – 512 с.
+<li> Прехт Д. Я – это я? И если да, то насколько? Философское путешествие / Д. Прехт. – Москва: АСТ, 2013. – 350 с.
+<li> Свендсен Л. Философия философии / Л. Свендсен. – Москва: Прогресс-Традиция, 2018. – 208 с.
+<li> Скирбекк Г. История философии: Учеб. пособие для стул. высш. учеб, заведений / Г. Скирбекк, Н. Гилье. – Москва: Гуманит. изд. центр ВЛАДОС, 2001. – 800 с.
+<li> Слезак Т. Как читать Платона / Т. Слезак. – Санкт-Петербург: Изд-во С.-Петерб. ун-та, 2008. – 314 с.
+<li> Тейчман Д. Философия. Руководство для начинающих / Д. Тейчман, К. Эванс. – Москва: Весь мир, 1998. – 248 с.
+<li> Хавьер С. Пять лекций по философии / С. Хавьер. – Москва: Институт философии, теологии и истории св. Фомы, 2007. – 200 с.
+<li> Хесс Р. 25 ключевых книг по философии / Р. Хесс. – Челябинск: Урал ЛТД, 1999. - 366
+<li> Ясперс К. Всемирная история философии. Введение / К. Ясперс. – Санкт-Петербург: Наука, 2000. – 272 с.
 </ol>  
       
 </tt>
