--- a/bib08phil.html
+++ b/bib08phil.html
@@ -19,6 +19,17 @@
 -------------------------------------------------------------
         <br>
         <br>
+Книги, представленные ниже, очень разные по степени сложности и охвату материала. Их объединяет то, что они дают общее понимание 
+философии. Это стиль мышления, способ мировидения. Список дан в алфавитном порядке. Однако, если вы хотие начать восхождение 
+от просто к сложному, советую такую последовательность:
+<br><br>
+Для самого начала: №16, 3, 8, 10-13. Вы поймете, что философия может (и должна) быть веселой и занимательной. <br>
+Для продолжения: №7, 9, 17, 20. <br>
+Для дальнешего развития: №1, 19, 21, 22, 22, 26. <br>
+После этого остаются книги, которые сами по себе являются примером философских текстов. Это, так сказать, философия из первых рук. 
+Аббаньяно, Бадью, Бохеньский, Гурина, Марсель, Мерло-Понти, Ортега-и-Гассет, Слезак, Хавьер, Ясперс - выдающиеся мыслители ХХ века.
+Именно у них и стоит узнавать, что же такое филосфия на самом деле. 
+<br><br>
 <ol>
 <li> 12 ведущих философов современности. – Москва: АСТ, 2014. – 414 с.
 <li> Аббаньяно Н. Мудрость философии и проблемы нашей жизни / Н. Аббаньяно. – Санкт-Петербург: Алетейя, 2000. – 311 с.
@@ -36,7 +47,7 @@
 <li> Марсель Г. Трагическая мудрость философии. Избранные работы / Г. Марсель. – Москва: Издательство гуманитарной литературы, 1995. – 216 с.
 <li> Мерло-Понти М. В защиту философии / М. Мерло-Понти. – Москва: Издательство гуманитарной литературы, 1996. – 248 с.
 <li> Гордер Ю. Мир Софии / Ю. Гордер. – Москва: Амфора, 2006. – 656 с.
-<li> Нагель Т. Что все это значит? Очень краткое введение в фило­ софию / Т. Нагель. – Москва: Идея-Пресс, 2001. – 84 с.
+<li> Нагель Т. Что все это значит? Очень краткое введение в фило­софию / Т. Нагель. – Москва: Идея-Пресс, 2001. – 84 с.
 <li> Ортега-и-Гассет Х. Что такое философия? / Х. Ортега-и-Гассет. – Москва: Наука, 1991. – 408 с.
 <li> Поупкин Р. Философия: вводный курс / Р. Поупкин, А. Стролл. – Москва: Серебряные нити, 1998. – 512 с.
 <li> Прехт Д. Я – это я? И если да, то насколько? Философское путешествие / Д. Прехт. – Москва: АСТ, 2013. – 350 с.
