--- a/news.html
+++ b/news.html
@@ -22,6 +22,16 @@
 <center>
 
 <pre>
++--------------------------------------------------------------------------------+
+|                                 2020-02-22                                     |
+|                                                                                |
+| В разделе "<a href="bib08phil.html">Введение в философию</a>" появилось две новых книги и небольшое         |
+| предисловие.                                                                   |
++--------------------------------------------------------------------------------+
+            
+</pre>
+
+<pre>
     +--------------------------------------------------------------------------------+
     |                                 2020-02-15                                     |
     |                                                                                |
