--- a/bib08phil.html
+++ b/bib08phil.html
@@ -19,16 +19,16 @@
 -------------------------------------------------------------
         <br>
         <br>
-Книги, представленные ниже, очень разные по степени сложности и охвату материала. Их объединяет то, что они дают общее понимание 
-философии. Это стиль мышления, способ мировидения. Список дан в алфавитном порядке. Однако, если вы хотие начать восхождение 
+Книги, представленные ниже, отличаются и по степени сложности, и по охвату материала. Объединяет их то, что они дают общее понимание 
+философии как таковой. Список дан в алфавитном порядке. Однако, если вы хотие начать восхождение 
 от просто к сложному, советую такую последовательность:
 <br><br>
 Для самого начала: №16, 3, 8, 10-13. Вы поймете, что философия может (и должна) быть веселой и занимательной. <br>
 Для продолжения: №7, 9, 17, 20. <br>
 Для дальнешего развития: №1, 19, 21, 22, 22, 26. <br>
-После этого остаются книги, которые сами по себе являются примером философских текстов. Это, так сказать, философия из первых рук. 
-Аббаньяно, Бадью, Бохеньский, Гурина, Марсель, Мерло-Понти, Ортега-и-Гассет, Слезак, Хавьер, Ясперс - выдающиеся мыслители ХХ века.
-Именно у них и стоит узнавать, что же такое филосфия на самом деле. 
+После этого остаются книги, которые сами по себе являются примером философского мышления. Это, так сказать, философия из первых рук. 
+Аббаньяно, Бадью, Бохеньский, Гурина, Марсель, Мерло-Понти, Ортега-и-Гассет, Слезак, Хавьер, Ясперс - выдающиеся интеллектуалы ХХ века.
+В их текстах можно найти ответ на вопрос, что такое философия на самом деле. 
 <br><br>
 <ol>
 <li> 12 ведущих философов современности. – Москва: АСТ, 2014. – 414 с.
