--- a/webcatch.html
+++ b/webcatch.html
@@ -28,6 +28,8 @@
 <br>
 <a href="web01lat.html">Изучение латыни</a>
 <br><br>
+<a href="plaintext.html">Чистый текст для работы с данными</a>
+<br><br>
 <a href="webcath02.html">Цифровой детокс</a>
 <br><br>
 <a href="webcatch03quot.html">О цитировании</a>
