--- a/plaintext.html
+++ b/plaintext.html
@@ -14,9 +14,9 @@
 
        
 <tt>
-                     ------------------------------------------- <br>
-<a href="index.html">главная</a> ⇢ <a href="geeklist.html">путеводитель гика</a> ⇢ чистый текст<br>
--------------------------------------------
+----------------------------------------- <br>
+<a href="index.html">главная</a> ⇢ <a href="webcatch.html">сетевой улов</a> ⇢ чистый текст <br>
+-----------------------------------------
         <br>
         <center>
 <pre>
