--- a/news.html
+++ b/news.html
@@ -23,6 +23,16 @@
 
 <pre>
     +--------------------------------------------------------------------------------+
+    |                                 2020-02-29                                     |
+    |                                                                                |
+    | В разделе "Сетевой улов" появилась новая рубрика – "<a href="webcatch04zettel.html">База знаний</a>". Она          |
+    | посвящена управлению информацией, созданию архива и т.п.                       |
+    +--------------------------------------------------------------------------------+
+                
+</pre>
+
+<pre>
+    +--------------------------------------------------------------------------------+
     |                                 2020-02-22                                     |
     |                                                                                |
     | В разделе "<a href="bib08phil.html">Введение в философию</a>" появилось две новых книги и небольшое         |
