--- a/webcatch.html
+++ b/webcatch.html
@@ -33,6 +33,8 @@
 <a href="webcath02.html">Цифровой детокс</a>
 <br><br>
 <a href="webcatch03quot.html">О цитировании</a>
+<br><br>
+<a href="webcatch04zettel.html">О создании базы знаний</a>
 
 </tt>
        <br>
