--- a/webcatch04zettel.html
+++ b/webcatch04zettel.html
@@ -14,14 +14,14 @@
 
        
 <tt>
-                     ----------------------------------------- <br>
+                     -------------------------------------- <br>
 <a href="index.html">главная</a> ⇢ <a href="webcatch.html">сетевой улов</a> ⇢ база знаний <br>
------------------------------------------
+--------------------------------------
         <br>
         <br>
 Одной из составляющих успеха многих выдающихся учёных (и они не скрывали этого) была организация базы знаний. 
 <br><br>
-Как писал Умберто Эко, «...картотека — это капиталовложение. Оно должно обслужить первоначальную цель, но в будущем, если дальнейшие занятия не будут нами оставлены, должно работать и на более глобальную стратегию. И в последующие годы, и в последующие десятилетия».
+Как писал Умберто Эко, «...картотека — это капиталовложение. Оно должно обслужить первоначальную цель, но в будущем, если дальнейшие занятия не будут нами оставлены, должно работать и на более глобальную стратегию. И в последующие годы, и в последующие десятилетия».<sup>1</sup>
 <br><br> 
 Ниже представлена подборка ресурсов, которые рассказывают о методологии базы знаний и её техническом воплощении. 
 <br><br>      
@@ -33,7 +33,7 @@
 <br>
 Статья, где обобщаются идеи и практики с предыдущего сайта. На самом деле, стартовать лучше всего отсюда. Хорошие иллюстрации, ясное изложение.
 <br><br>      
-<a href="https://www.lesswrong.com/posts/NfdHG6oHBJ8Qxc26s/the-zettelkasten-method-1">zlesswrong.com</a>
+<a href="https://www.lesswrong.com/posts/NfdHG6oHBJ8Qxc26s/the-zettelkasten-method-1">lesswrong.com</a>
 <br>
 Длинная статья Абрама Демски на сайте сообщества Lesswrong. Автор уделяет большое внимание принципам работы с аналоговым архивом (реальными бумажными карточками). Даже если вы намерены использовать цифровой подход, прочитать стоит. Хотя бы для того, чтобы понять базовые принципы.
 <br><br>      
@@ -54,7 +54,7 @@
 
 <br><br><br>
 ----------------- <br>
-Эко, У. Как написать дипломную работу. Гуманитарные науки / Перев. с итал. Е. А. Костюкович. – Санкт-Перетбург : "Симпозиум", 2004. – C. 184
+1. Эко, У. Как написать дипломную работу. Гуманитарные науки / Перев. с итал. Е. А. Костюкович. – Санкт-Перетбург : "Симпозиум", 2004. – C. 184
 
 </tt>
 
