--- a/webcatch04zettel.html
+++ b/webcatch04zettel.html
@@ -23,7 +23,7 @@
 <br><br>
 Как писал Умберто Эко, «...картотека — это капиталовложение. Оно должно обслужить первоначальную цель, но в будущем, если дальнейшие занятия не будут нами оставлены, должно работать и на более глобальную стратегию. И в последующие годы, и в последующие десятилетия».<sup>1</sup>
 <br><br> 
-Ниже представлена подборка ресурсов, которые рассказывают о методологии базы знаний и её техническом воплощении. 
+Ниже представлена подборка ресурсов, которые рассказывают о методологии создания базы знаний. 
 <br><br>      
 <a href="https://zettelkasten.de">zettelkasten.de</a>
 <br>
@@ -39,7 +39,7 @@
 <br><br>      
 <a href="https://v4.chriskrycho.com/zettelkasten/index.html">chriskrycho.com</a>
 <br>  
-Сборник заметок Криса Кручо. Есть интересные идеи по воплощению практики ведения базы знаний. 
+Сборник заметок Криса Кручо. Есть интересные идеи о технике создания архива. 
 <br><br>      
 <a href="http://www.dansheffler.com/tags/Zettlekasten">dansheffler.com</a>
 <br>      
@@ -48,7 +48,7 @@
 Разумеется, существует не только подход Лумана.
 <br><br>      
 Достойна упоминания практика <a href="https://ryanholiday.net/the-notecard-system-the-key-for-remembering-organizing-and-using-everything-you-read">Райна Холидея</a> 
-и <a href="https://medium.com/@paulorrj/the-robert-greene-method-of-writing-books-e175ade04897">Роберта Грина</a> (В данном случае ссылка на статью Пауло Рибейро, которые анализирует практику Грина). 
+и <a href="https://medium.com/@paulorrj/the-robert-greene-method-of-writing-books-e175ade04897">Роберта Грина</a> (Cсылка на статью Пауло Рибейро, которые анализирует практику Грина). 
         
         
 
