--- a/news.html
+++ b/news.html
@@ -25,6 +25,15 @@
     +--------------------------------------------------------------------------------+
     |                                 2020-02-29                                     |
     |                                                                                |
+    | В разделе Emacs появилсь <a href=" emacs02latex.html">новая заметка</a> и ссылка на <a href="emacs.html">подкаст Майка Замански</a>>.     |
+    +--------------------------------------------------------------------------------+
+                    
+</pre>
+
+<pre>
+    +--------------------------------------------------------------------------------+
+    |                                 2020-02-29                                     |
+    |                                                                                |
     | В разделе "Сетевой улов" появилась новая рубрика – "<a href="webcatch04zettel.html">База знаний</a>". Она          |
     | посвящена управлению информацией, созданию архива и т.п.                       |
     +--------------------------------------------------------------------------------+
