--- a/news.html
+++ b/news.html
@@ -25,7 +25,7 @@
     +--------------------------------------------------------------------------------+
     |                                 2020-03-06                                     |
     |                                                                                |
-    | В разделе Emacs появилсь <a href=" emacs02latex.html">новая заметка</a> и ссылка на <a href="emacs.html">подкаст Майка Замански</a>>.     |
+    | В разделе Emacs появилсь <a href=" emacs02latex.html">новая заметка</a> и ссылка на <a href="emacs.html">подкаст Майка Замански</a>.     |
     +--------------------------------------------------------------------------------+
                     
 </pre>
