--- a/emacs02latex.html
+++ b/emacs02latex.html
@@ -23,8 +23,9 @@
 Emacs работает с чистым текстом (и в этом его сила). <br>
 C помощью команды C-c C-e вы можете вызвать специальное меню. Если вы ходите создать pdf файл с вашим текстом, 
 да еще и прекрасно сформатированный в стиле Latex, нажмите l и затем p. <br><br>
-Правда необходима предварительная настройка системы. Без нее Emacs будет ругаться и говорить об ошибках. <br>
-Во-первых, для корректной работы нужно указать путь к пакету pdflatex (да, предполагается, что система Latex на вашем ПК уже установлена).<br>
+Правда необходима предварительная настройка системы. Без нее Emacs будет ругаться и говорить об ошибках. <br><br>
+Во-первых, вам нужно будет установить пакет ox-latex на Emacs.<br><br>
+Во-вторых, для корректной работы нужно указать путь к латеховскому пакету pdflatex (да, предполагается, что система Latex на вашем ПК уже установлена).<br>
 Как его узнать? <br>
 Просто наберите в терминале команду:<br><br>
         
